@@ -4,6 +4,7 @@
 * Added a function for manually starting a new segment, saving the current one. Useful for multi-part boss fights.
 * Added key bindings for toggling windows, resetting data, and starting a new segment.
 * Fixed a bug in Damage Taken mode.
+* Fixed a few embeds.xml errors.
 
 1.2-15:
 * Now using combat log event flags to determine if we are interested in actors. Should result in a slight performance increase.
